--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "@fortawesome/fontawesome-svg-core": "^6.3.0",
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@react-google-maps/api": "^2.18.1",
+    "geolib": "^3.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-maps": "9.4.5",
     "react-router-dom": "^6.9.0"
   },
   "devDependencies": {
