--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.2.0",
     "react-google-maps": "^9.4.5",
     "react-router-dom": "^6.9.0",
+    "socket.io": "^4.6.1",
     "socket.io-client": "^4.6.1"
   },
   "devDependencies": {
