--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@react-google-maps/api": "^2.18.1",
+    "axios": "^1.3.4",
     "cloudinary-react": "^1.8.1",
     "geolib": "^3.3.3",
     "react": "^18.2.0",
